<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CleverPumpkinTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="duration_text">Duration:&#160;</string>
    <string name="takeoff_text">Takeoff</string>
    <string name="landing_text">Landing</string>
    <string name="price_string">Price:&#160;</string>
    <string name="duration_sort">Sort by duration</string>
    <string name="price_sort">Sort by price</string>
    <string name="info_string">Info</string>
    <string name="loading_string">Loading&#8230;</string>
    <string name="detailed_flight_text">Detailed info for flight number&#160;</string>
    <string name="flight_list_url">http://cleverpumpkin.ru/test/flights0541.xml</string>
    <string name="flight_url_prefix">http://cleverpumpkin.ru/test/flights/</string>

</resources>
